--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <h1>Heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        Sequi aperiam libero eveniet sit similique minus velit,
-        magnam cum enim consequuntur, rerum soluta sed excepturi molestias magni ducimus voluptatum,
-        itaque inventore!</p>
+    <p>Paragraph</p>
+    <!--Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Font Awsome-->
+    <script src="https://kit.fontawesome.com/39ed827bee.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
