--- a/game-library.html
+++ b/game-library.html
@@ -58,7 +58,7 @@
     <header id="header" class="container section">
         <div class="row">
             <div class="col-12 col-xl-6 text-center text-xl-start">
-                <h1 class="display-3">Game Library</h1>
+                <h1 class="display-3">Game library</h1>
                 <p class="lead display-6 sub-heading-color">Discover new games to rent or buy</p>
                 <p class="my-4">Dive into a world of adventure, strategy, and fun with our carefully curated collection
                     of board games to rent or buy.
@@ -103,7 +103,7 @@
 
     <!-- main element to hold all key sections of the game library page. It is not part of the grid structure -->
     <main>
-        <!-- Services section -->
+        <!-- New Games section -->
         <section id="new-games" class="container section">
             <div class="row">
                 <div class="col-12 text-center">
@@ -116,8 +116,8 @@
                             <h3 class="card-title sub-heading-color">Galaxy Pioneers</h3>
                             <p class="card-text">Utilise resources wisely, negotiate with alien species, and navigate
                                 cosmic events to expand your interstellar empire.</p>
-                            <p>Number of players: 2-4</p>
-                            <p>Ages: 12+</p>
+                            <p><em>Number of players:</em> 2-4</p>
+                            <p><em>Ages:</em> 12+</p>
                         </div>
                     </div>
                 </div>
@@ -130,8 +130,8 @@
                             <p class="card-text">Enter the enchanted forest of Mystic Woods. Combine spells, gather
                                 mystical
                                 creatures, and solve puzzles to protect the realm.</p>
-                            <p>Number of players: 1-6</p>
-                            <p>Ages: 10+</p>
+                            <p><em>Number of players:</em> 1-6</p>
+                            <p><em>Ages:</em> 10+</p>
                         </div>
                     </div>
                 </div>
@@ -144,8 +144,8 @@
                             <p class="card-text">Engage in battles, form fleeting alliances, and navigate treacherous
                                 waters
                                 to become the most feared pirate of them all.</p>
-                            <p>Number of players: 3-4</p>
-                            <p>Ages: 14+</p>
+                            <p><em>Number of players:</em> 3-4</p>
+                            <p><em>Ages:</em> 14+</p>
                         </div>
                     </div>
                 </div>
@@ -159,8 +159,8 @@
                                 way
                                 in
                                 this heartwarming journey of discovery and friendship.</p>
-                            <p>Number of players: 2-4</p>
-                            <p>Ages: 5+</p>
+                            <p><em>Number of players:</em> 2-4</p>
+                            <p><em>Ages:</em> 5+</p>
                         </div>
                     </div>
                 </div>
@@ -170,8 +170,8 @@
         <!-- Favourite Games section -->
         <section id="fav-games" class="container section">
             <div class="row">
-                <div class="col-12">
-                    <h2>Favourites</h2>>
+                <div class="col-12 text-center">
+                    <h2 class="display-6">Favourites</h2>
                 </div>
                 <div class="col-12 col-md-6 col-xl-3">
                     <div class="card">
@@ -181,8 +181,8 @@
                             <h3 class="card-title sub-heading-color">Settlers of Catan</h3>
                             <p class="card-text">Picture yourself in the era of discoveries: after a long voyage of
                                 great deprivation, your ships have finally reached the coast of an uncharted island.</p>
-                            <p>Number of players: 3-4</p>
-                            <p>Ages: 10+</p>
+                            <p><em>Number of players:</em> 3-4</p>
+                            <p><em>Ages:</em> 10+</p>
                         </div>
                     </div>
                 </div>
@@ -193,8 +193,8 @@
                             <h3 class="card-title sub-heading-color">Monopoly</h3>
                             <p class="card-text">Featuring classic Monopoly gameplay, this favourite family board game
                                 is all about buying, selling, and trading properties to win.</p>
-                            <p>Number of players: 2-6</p>
-                            <p>Ages: 8+</p>
+                            <p><em>Number of players:</em> 2-6</p>
+                            <p><em>Ages:</em> 8+</p>
                         </div>
                     </div>
                 </div>
@@ -207,8 +207,8 @@
                             <p class="card-text">Exploding Kittens is a kitty-powered version of Russian Roulette.
                                 Players take turns drawing cards until someone draws an exploding kitten card and loses
                                 the game!</p>
-                            <p>Number of players: 2-5</p>
-                            <p>Ages: 7+</p>
+                            <p><em>Number of players:</em> 2-5</p>
+                            <p><em>Ages:</em> 7+</p>
                         </div>
                     </div>
                 </div>
@@ -220,8 +220,8 @@
                             <p class="card-text">The classic game of mystery and suspense. Cluedo has 6 suspects, 6
                                 weapons and also a whole maze of possible murder scenes to explore. It's up to you to
                                 question the suspects and crack the case.</p>
-                            <p>Number of players: 2-6</p>
-                            <p>Ages: 8+</p>
+                            <p><em>Number of players:</em> 2-6</p>
+                            <p><em>Ages:</em> 8+</p>
                         </div>
                     </div>
                 </div>
