--- a/game-library.html
+++ b/game-library.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                     <li class="nav-item"></li>
-                        <a href="booking.html" class="btn btn-primary ms-lg-3">Book now</a>
+                        <a href="booking.html" class="btn ms-lg-3 custom-button-filled">Book now</a>
                     </li>
                 </ul>
             </div>
