--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             </div>
         </section>
         <!--Events section-->
-        <section id="events" class="container events">
+        <section id="events" class="container section">
         <div class="row">
             <div class="col-12">
                 <h2 class="display-6 text-center">Join our events</h2>
