--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#services">Services</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#events">Events</a>
                     </li>
                     <li class="nav-item">
@@ -52,7 +52,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="booking.html" class="btn ms-lg-3 custom-button-filled">Book now</a>
                     </li>
                 </ul>
