--- a/game-library.html
+++ b/game-library.html
@@ -52,7 +52,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
-                    <li class="nav-item"></li>
+                    <li class="nav-item">
                         <a href="booking.html" class="btn ms-lg-3 custom-button-filled">Book now</a>
                     </li>
                 </ul>
